--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>felipin</header>
-    <slides></slides>
+    <slides>a é mesmo</slides>
     <carteira></carteira>
     <historico></historico>
     <categoria></categoria>
